--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@better-auth/utils": "^0.3.0",
+    "@prisma/client": "^4.15.0",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "better-auth": "^1.3.34",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "prisma": "^4.15.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
